clean up code, matches still bugged

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elemental Memory</title>
+    <title>Dinosaur Memory</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <div class="game-container">
-        <h1>Elemental Memory</h1>
+        <h1>Dinosaur Memory</h1>
         <div id="game-board"></div>
         <div class="info-panel">
             <p>Moves: <span id="moves">0</span></p>
