--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dinosaur Memory</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <title>Prehistoric Memory</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="game-container">
-        <h1>Dinosaur Memory</h1>
-        <div id="game-board"></div>
-        <div class="info-panel">
-            <p>Moves: <span id="moves">0</span></p>
-            <p>Time: <span id="timer">00:00</span></p>
-            <p>Score: <span id="score">0</span></p>
-        </div>
-        <button id="start-button">Start New Game</button>
+    <h1>Prehistoric Memory</h1>
+    <div id="game-board"></div>
+    <div id="game-info">
+        <div id="timer">Time: 0s</div>
+        <div id="score">Score: 0</div>
+        <div id="moves">Moves: 0</div>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
