--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
             <div id="score">Score: 0</div>
             <div id="moves">Moves: 0</div>
         </div>
+        <button id="start-new-game">Start New Game</button>
         <script src="js/script.js"></script>
     </body>
 </html>
