add meaningful comments and update styles

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,15 @@
 </head>
     <body>
         <h1>Prehistoric Memory</h1>
-        <div id="game-board"></div>
-        <div id="game-info">
+    <!-- Container for the game board -->
+    <div id="game-board"></div>
+    <!-- Container for game information (timer, score, moves) -->
+    <div id="game-info">
             <div id="timer">Time: 0s</div>
             <div id="score">Score: 0</div>
             <div id="moves">Moves: 0</div>
         </div>
+        <!-- Button to start a new game -->
         <button id="start-new-game">Start New Game</button>
         <script src="js/script.js"></script>
     </body>
