--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,18 @@
 </head>
     <body>
         <h1>Prehistoric Memory</h1>
-    <!-- Container for the game board -->
-    <div id="game-board"></div>
-    <!-- Container for game information (timer, score, moves) -->
-    <div id="game-info">
+        <!-- Container for the game board -->
+        <div id="game-board"></div>
+        <!-- Container for game information (timer, score, moves) -->
+        <div id="game-info">
             <div id="timer">Time: 0s</div>
             <div id="score">Score: 0</div>
             <div id="moves">Moves: 0</div>
         </div>
         <!-- Button to start a new game -->
         <button id="start-new-game">Start New Game</button>
+        <!-- Completion message -->
+        <div id="game-message" class="hidden"></div>
         <script src="js/script.js"></script>
     </body>
 </html>
