--- a/public/index.html
+++ b/public/index.html
@@ -21,21 +21,26 @@
             </div>
             <button id="start-new-game">Start New Game</button>
         </div>
-        <!-- Bonus container -->
-        <div id="bonuses">
-            <h3>Bonuses</h3>
-            <ul id="bonus-list">
-                <li id="time-bonus">Time Bonuses</li>
-                <li>60 Seconds - 10 Points</li>
-                <li>45 Seconds - 15 Points</li>
-                <li>30 Seconds - 20 Points</li>
-                <li id="move-bonus">Move Bonuses</li>
-                <li>10 Moves - 30 Points</li>
-                <li>15 Moves - 20 Points</li>
-                <li>20 Moves - 10 Points</li>
-            </ul>
-        </div>
     </div>
+    <!-- Bonus container -->
+    <div id="bonuses">
+        <h3>Bonuses</h3>
+        <ul id="bonus-list">
+            <li id="time-bonus">Time Bonuses</li>
+            <li>60 Seconds - 10 Points</li>
+            <li>45 Seconds - 15 Points</li>
+            <li>30 Seconds - 20 Points</li>
+            <li id="move-bonus">Move Bonuses</li>
+            <li>10 Moves - 30 Points</li>
+            <li>15 Moves - 20 Points</li>
+            <li>20 Moves - 10 Points</li>
+        </ul>
+            <!-- High Score container -->
+        <!-- <div id="high-score-container">
+            <h3>High Score</h3>
+            <p id="high-score">0</p>
+        </div> -->
+    </div>       
     <script src="js/script.js"></script>
 </body>
 </html>
