add high score in bonus list

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
                 <li>10 Moves - 30 Points</li>
                 <li>15 Moves - 20 Points</li>
                 <li>20 Moves - 10 Points</li>
+                <li id="high-score">High Score</li>
+
             </ul>
         </div>
     </div>
