implement high score

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,16 @@
                 <li>10 Moves - 30 Points</li>
                 <li>15 Moves - 20 Points</li>
                 <li>20 Moves - 10 Points</li>
-                <li id="high-score">High Score</li>
-
             </ul>
+            <h3>High Score</h4>
+            <p id="high-score">0</p>
         </div>
     </div>
     <script src="js/script.js"></script>
 </body>
 </html>
+
+<!-- <div id="high-score-container">
+    <h3>High Score</h3>
+    <p id="high-score">0</p>
+</div> -->
