--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
         <!-- Game board and game information container -->
         <div id="game-board-info-container">
             <div id="game-board"></div>
-            <div id="game-message" class="hidden"></div>
+            <div id="game-message" class="hidden">
+                <button id="close-game-message" class="close-button">x</button>
+                <p>Game Over!</p>
+            </div>
             <div id="game-info">
                 <div id="timer">Time: 0s</div>
                 <div id="score">Score: 0</div>
