new high score! message added

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
             <h3>Bonuses</h3>
             <ul id="bonus-list">
                 <li id="time-bonus">Time Bonuses</li>
-                <li>60 Seconds - 10 Points</li>
-                <li>45 Seconds - 15 Points</li>
                 <li>30 Seconds - 20 Points</li>
+                <li>45 Seconds - 15 Points</li>
+                <li>60 Seconds - 10 Points</li>
                 <li id="move-bonus">Move Bonuses</li>
                 <li>10 Moves - 30 Points</li>
                 <li>15 Moves - 20 Points</li>
@@ -39,6 +39,7 @@
             </ul>
             <h3>High Score</h4>
             <p id="high-score">0</p>
+            <button id="reset-high-score">Reset High Score</button>
         </div>
     </div>
     <script src="js/script.js"></script>
