fix congratulations new high score message

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,12 @@
         <!-- Game board and game information container -->
         <div id="game-board-info-container">
             <div id="game-board"></div>
+            <!-- Game completion message -->
             <div id="game-message" class="hidden">
                 <button id="close-game-message" class="close-button">x</button>
                 <p>Game Over!</p>
             </div>
+            <!-- Game info section -->
             <div id="game-info">
                 <div id="timer">Time: 0s</div>
                 <div id="score">Score: 0</div>
@@ -37,6 +39,7 @@
                 <li>15 Moves - 20 Points</li>
                 <li>20 Moves - 10 Points</li>
             </ul>
+            <!-- High Score section -->
             <h3>High Score</h4>
             <p id="high-score">0</p>
             <button id="reset-high-score">Reset High Score</button>
@@ -45,8 +48,3 @@
     <script src="js/script.js"></script>
 </body>
 </html>
-
-<!-- <div id="high-score-container">
-    <h3>High Score</h3>
-    <p id="high-score">0</p>
-</div> -->
