add close button getting darker on hover

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
                 <div id="score">Score: 0</div>
                 <div id="moves">Moves: 0</div>
             </div>
+            <!-- Start new game button -->
             <button id="start-new-game">Start New Game</button>
         </div>
         <!-- Bonus container -->
@@ -42,6 +43,7 @@
             <!-- High Score section -->
             <h3>High Score</h4>
             <p id="high-score">0</p>
+            <!-- Reset high score button -->
             <button id="reset-high-score">Reset High Score</button>
         </div>
     </div>
