--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prehistoric Memory</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="shortcut icon" type="image/x-icon" href="images/icon.png" />
+    <link rel="icon" type="image/x-icon" href="images/icon.png" />
 </head>
 <body>
     <h1>Prehistoric Memory</h1>
